modifs bord terrain + autre

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 	<script src="public/js/Display.js"></script>
 	<script src="public/js/Maths.js"></script>
 	<script src="public/js/jeu.js"></script>
+	<script src="public/js/Map.js"></script>
 	<script src="public/js/Spell.js"></script>
 	<script src="public/js/Ball.js"></script>
 	<script src="public/js/Client.js"></script>
