Compatibilité browsers, gestion cd, etc...

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
 			</forum>
 		</div>
 		<canvas id="canvas" width="800" height="600"></canvas>
+		<div class="informations">
+			<div id="spells">
+			</div>
+			<div id="timeleft"></div>
+			<div class="score">
+				<div id="score1"></div>
+				<div id="score2"></div>
+			</div>
+		</div>
 	</div>
 	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
