--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
 				<div id="score1">0</div>
 				<div id="score2">0</div>
 			</div>
-			<div class="actions"><button id="switch">Changer d'équipe</button><button id="leave">Quitter</div></div>
+			<div class="actions"><button id="switch">Changer d'équipe</button><button id="leave">Quitter</button></div>
 		</div>
 		<div class="rooms">
 			<span id="nbPlayers">0</span> joueur(s) en ligne
 			<form id="createRoom">
 				<input type="text" placeholder="Nom de la partie" id="roomName">
-				<input type="number" id="roomNbPlayer" value="4" max="20" min="2" step="2">
-				<input type="number" id="roomTime" value="5" max="20" min="1" step="1">
+				<input type="number" id="roomNbPlayer" value="4" max="20" min="2" step="2"> joueurs
+				<input type="number" id="roomTime" value="5" max="20" min="1" step="1"> minutes
 				<input type="submit" value="Créer partie">
 			</form>
 			<div id="rooms"></div>	
