ajout des sprites + images pour les deux team. PB : ne marche pas bien quand plusieur personnes

--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,6 @@
 	<script src="public/js/Spell.js"></script>
 	<script src="public/js/Ball.js"></script>
 	<script src="public/js/Client.js"></script>
+	<script src="public/js/Sprite.js"></script>
 </body>
 </html>
